--- a/index.html
+++ b/index.html
@@ -110,6 +110,34 @@
                     <label>Tên người ký cột 3:</label>
                     <input type="text" id="nguoiKyCot3" value="Nguyễn Chí Thanh" placeholder="Nguyễn Chí Thanh">
                 </div>
+                <div class="form-group">
+                    <label>Chữ ký người ký cột 2:</label>
+                    <input type="file" id="signatureUploadCot2" accept="image/*" style="display: none;" onchange="handleSignatureUpload('cot2', this)">
+                    <div style="display: flex; gap: 8px; align-items: center;">
+                        <button type="button" class="btn" style="padding: 6px 12px; font-size: 0.875rem;" onclick="document.getElementById('signatureUploadCot2').click()">
+                            📎 Tải chữ ký
+                        </button>
+                        <div id="signaturePreviewCot2" style="display: none; position: relative;">
+                            <img id="signatureImageCot2" src="" alt="Chữ ký" style="max-width: 150px; max-height: 60px; border: 1px solid #ddd; padding: 4px; background: white;">
+                            <button type="button" onclick="removeSignature('cot2')" style="position: absolute; top: -8px; right: -8px; background: #dc2626; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; font-size: 12px;">×</button>
+                        </div>
+                    </div>
+                    <input type="hidden" id="signatureDataCot2" value="">
+                </div>
+                <div class="form-group">
+                    <label>Chữ ký người ký cột 3:</label>
+                    <input type="file" id="signatureUploadCot3" accept="image/*" style="display: none;" onchange="handleSignatureUpload('cot3', this)">
+                    <div style="display: flex; gap: 8px; align-items: center;">
+                        <button type="button" class="btn" style="padding: 6px 12px; font-size: 0.875rem;" onclick="document.getElementById('signatureUploadCot3').click()">
+                            📎 Tải chữ ký
+                        </button>
+                        <div id="signaturePreviewCot3" style="display: none; position: relative;">
+                            <img id="signatureImageCot3" src="" alt="Chữ ký" style="max-width: 150px; max-height: 60px; border: 1px solid #ddd; padding: 4px; background: white;">
+                            <button type="button" onclick="removeSignature('cot3')" style="position: absolute; top: -8px; right: -8px; background: #dc2626; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; font-size: 12px;">×</button>
+                        </div>
+                    </div>
+                    <input type="hidden" id="signatureDataCot3" value="">
+                </div>
             </div>
         </div>
         <div class="right-panel">
